@@ -803,6 +803,9 @@ derives  from the class
 and uses a \ccc{Weighted_point} type
 derived from the type \ccc{Point_2} of
 \ccc{Triangulation_euclidean_traits_2<Rep>}.
+There is also a class \ccc{Regular_triangulation_filtered_traits_2<FK>}
+which provides filtered predicates (efficient and exact).
+
 
 \subsubsection{The Vertex type and Face Type of a Regular Triangulation}
 
