@@ -36,7 +36,8 @@ derived from the type \ccc{K::Point_2}.
 
 
 \ccSeeAlso
-\ccc{RegularTriangulationTraits_2} \\
+\ccc{RegularTriangulationTraits_2}\\
+\ccc{CGAL::Regular_triangulation_filtered_traits_2}\\
 \ccc{CGAL::Regular_triangulation_2}
 
 
