@@ -73,6 +73,7 @@ Chapter~\ref{ref_chapter_2D_Triangulation_Data_Structure}.
 \ccRefIdfierPage{CGAL::Triangulation_euclidean_traits_2<K>}\\
 \ccRefIdfierPage{CGAL::Triangulation_euclidean_traits_xy_3<K>}\\
 \ccRefIdfierPage{CGAL::Regular_triangulation_euclidean_traits_2<K,Weight>}\\
+\ccRefIdfierPage{CGAL::Regular_triangulation_filtered_traits_2<FK>}\\
 
 \ccRefIdfierPage{CGAL::Triangulation_face_base_2<Traits,Fb>}\\
 \ccRefIdfierPage{CGAL::Triangulation_vertex_base_2<Traits,Vb>}\\
